--- a/Holamundo.html
+++ b/Holamundo.html
@@ -14,6 +14,7 @@
 
     <section>
         <h2>Empezando con las etiquetas</h2>
+        <h3>Comprobando cambios</h3>
     </section>
 
     <footer>
