--- a/Holamundo.html
+++ b/Holamundo.html
@@ -4,6 +4,7 @@
     <title>Tema2-TIC</title>
     <meta content="Antonio Navarro" name="author">
     <meta charset="utf-8">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
 
@@ -15,11 +16,7 @@
 
     <section>
         <h2>Empezando con las etiquetas</h2>
-<<<<<<< Updated upstream
-        <h3>Comprobando cambios</h3>
-=======
-        <a href="https://www.google.es/" target="_blank">Más información</a>
->>>>>>> Stashed changes
+<
     </section>
 <div>
     <p><strong>Lista de la compra</strong></p>
@@ -33,9 +30,11 @@
             <li>Estrella</li>
         <li>Alhambra</li></ul></li>
     </ol>
-    
-
 </div>
+    <div>
+      <img src="Wigetta.jpg" alt="Wigetta, Un vaije mágico." width="200px">  
+    </div>
+
     <footer>
         <p>Creado por Antonio Navarro</p>
     </footer>
